# pencheff-ce

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.toolchain.yml  docker-compose.yml  main.js  package-lock.json  package.json  preload.js
apps/api/: .env.example  Dockerfile  Dockerfile.toolchain  alembic.ini  pyproject.toml
apps/api/pencheff_api/: config.py  events.py  main.py
apps/api/pencheff_api/auth/: api_key.py  clerk.py  deps.py  jwt.py  oauth_google.py  password.py  scopes.py  single_tenant.py
apps/api/pencheff_api/db/: base.py  models.py  models_otel.py
apps/api/pencheff_api/middleware/: __init__.py  audit.py
apps/api/pencheff_api/observability/: __init__.py  bootstrap.py  exporter.py  redact.py  sampler.py
apps/api/pencheff_api/routers/: advisories.py  agentic_fix.py  api_keys.py  assets.py  auth.py  billing.py  branding.py  capabilities.py  comments.py  compliance.py  dashboard.py  dependencies.py  engagements.py  findings.py  fix_proposals.py  github_webhooks.py  guardrails.py  integrations.py  intruder.py  llm_providers.py  llm_proxy.py  llm_proxy_agentic.py  memory_scan.py  notes.py  observability.py  orgs.py  otlp_ingest.py  proxy.py  proxy_ingest.py  registries.py  repeater.py  reports.py  repos.py  sboms.py  scans.py  schedules.py  security_lake.py  share.py  targets.py  traces.py  (+4 more)
apps/api/pencheff_api/schemas/: auth.py  compliance.py  findings.py  fix_proposals.py  llm_providers.py  orgs.py  reports.py  scans.py  security_lake.py  targets.py  unified_findings.py  workspaces.py
apps/api/pencheff_api/services/: active_verify.py  advisory_ai.py  agent_firewall.py  agent_runner.py  ai_gate.py  api_drift.py  bulk_fix.py  compliance.py  credentials.py  dispatch_mode.py  email.py  engagement_oast.py  finding_correlation.py  fix_applier.py  fix_llm.py  fix_proposer.py  fix_quota.py  fix_recipes.py  github_app.py  github_check_runs.py  grader.py  guardrails.py  host_validation.py  integration_dispatch.py  invites.py  llm.py  llm_model_catalog.py  on_demand_scheduler.py  quota.py  recheck.py  repo_filter.py  repo_findings.py  repo_fp_triage.py  reports.py  route_index.py  scan_runner.py  scheduler.py  threat_model.py  tracing.py  triage_llm.py  (+2 more)
apps/api/pencheff_api/tasks/: agentic_fix_task.py  asset_discovery_task.py  bulk_fix_task.py  celery_app.py  correlation_task.py  email_task.py  integration_notify_task.py  intruder_task.py  observability_retention_task.py  recheck_task.py  repo_scan_task.py  report_task.py  retention_task.py  scan_task.py  scheduled_scan_task.py  security_lake_ingest_task.py  sla_monitor_task.py
apps/api/tests/: test_active_verify.py  test_agent_firewall_proxy.py  test_agentic_fix_scan_targets.py  test_agentic_fixer.py  test_ai_disabled_without_key.py  test_ai_gate.py  test_api_key_auth_flow.py  test_api_keys.py  test_artifact_orchestrator.py  test_artifact_tools.py  test_auto_threat_model.py  test_cloud_target_schemas.py  test_consent_payload_v2.py  test_credentials.py  test_dast_protocol_tools.py  test_desktop_oauth_flow.py  test_dispatch_mode_kind_aware.py  test_grader.py  test_grader_llm.py  test_host_kind_config.py  test_host_validation.py  test_hybrid_orchestrator.py  test_hybrid_tools.py  test_hybrid_tools_ci.py  test_kind_aware_dispatch_routing.py  test_kind_config_validators.py  test_llm_adapters.py  test_llm_model_catalog.py  test_llm_provider_wiring.py  test_llm_providers_router.py  test_llm_providers_schema.py  test_llm_resolver.py  test_memory_structured_items.py  test_on_demand_schedule_dispatch.py  test_orgs_allow_private_targets.py  test_orgs_security_lake_toggle.py  test_plan_limits.py  test_pr_creator_lockfiles.py  test_repo_fp_triage.py  test_repo_integration_purge.py  (+53 more)
apps/api/tests/integration/: test_swarm_against_dvwa.py
apps/api/tests/services/: test_guardrails_tier4.py  test_scan_runner_summary_merge.py
plugins/pencheff/: .mcp.json  CLEAN_ROOM.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
plugins/pencheff/docs/: DISCLAIMER.md  ENGAGEMENT-LIFECYCLE.md  PLAYBOOKS.md  PROJECT_MEMORY.md  orchestrator.md  plugin-sdk.md  policies.md  workflows.md
plugins/pencheff/docs/examples/: example-detection-rule.md  example-engagement-plan.md  example-stig-finding.md
plugins/pencheff/pencheff/: __init__.py  __main__.py  artifact_tools.py  cli_runners.py  config.py  dast_protocol_tools.py  hybrid_tools.py  server.py  server_enterprise.py  server_playbooks.py  source_code_tools.py
plugins/pencheff/pencheff/cli/: llm_redteam.py
plugins/pencheff/pencheff/core/: cookie_parser.py  credentials.py  cve_feed.py  dependency_manager.py  findings.py  (+29 more)
plugins/pencheff/policies/: license_policy_default.yaml  sca_policy_default.yaml
plugins/pencheff/tests/: test_bias_plugin.py  test_coding_agent_plugin.py  test_compliance_gdpr_iso42001.py  test_cve_feed_freshness.py  test_cve_feed_nvd.py  test_datasets_aegis_unsafebench_xstest.py  test_goat.py  test_guardrails_scan_time_tier4.py  test_hydra.py  test_kubeconfig_derivation.py  test_llm_engine.py  test_llm_red_team_smoke.py  test_lsp_diagnostics.py  test_mcp_agent_probe.py  test_mcp_dynamic.py  test_mcp_fingerprint.py  test_mcp_manifest_client.py  test_mcp_oast_adapter.py  test_mcp_plugin.py  test_mcp_scan_module.py  test_mcp_session_config.py  test_mcp_static_analyzers.py  test_mcp_transport_getter.py  test_mcp_transport_probes.py  test_ml_analyzers.py  test_ml_fetcher.py  test_ml_fingerprint.py  test_ml_format_detect.py  test_ml_pickle_scan.py  test_ml_plugin.py  test_ml_scan_module.py  test_ml_session_config.py  test_promptfoo_parity.py  test_rag_connector.py  test_rag_endpoint_probe.py  test_rag_fingerprint.py  test_rag_plugin.py  test_rag_poison.py  test_rag_query_probes.py  test_rag_scan_module.py  (+17 more)
plugins/sentry/: README.md  pyproject.toml
plugins/sentry/pencheff_sentry/: __init__.py  cli.py  core.py  firewall.py  litellm_plugin.py  memory.py  proxy.py
plugins/sentry/tests/: test_firewall.py  test_injection.py  test_memory.py
(+1091 files in other folders)
